# sdl3-main-test-ios

./: CLAUDE.md  CMakeLists.txt  README.md  build_ios_library.sh  build_library.sh
SDLMainTest/: GameOverlayView.swift  SDLBridge.swift  SDLMainTest-Bridging-Header.h  SDLMainTestApp.swift  SDL_main.c  SplashView.swift  SwiftUIBridge.m  TouchBlockingModifier.swift  sdl_game_engine.h
SDLMainTest.xcodeproj/: project.pbxproj
SDLMainTest.xcodeproj/project.xcworkspace/xcuserdata/jmillard.xcuserdatad/: UserInterfaceState.xcuserstate
SDLMainTest.xcodeproj/xcuserdata/jmillard.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
SDLMainTest.xcodeproj/xcuserdata/jmillard.xcuserdatad/xcschemes/: xcschememanagement.plist
SDLMainTest/App/: AppCoordinator.swift
SDLMainTest/Bridge/: SDLBridge.swift  SwiftUIBridge.m
SDLMainTest/Components/: ViewExtensions.swift
SDLMainTest/Engine/: SDL_main.c
SDLMainTest/Views/: ContentView.swift  GameOverlayView.swift  GameView.swift  MainMenuView.swift  RootAppView.swift  SDLGameView.swift
include/: sdl_game_library.h
src/: .sdl_game_engine.c.swp  sdl_game_engine.c
